# icu_cmake

./: .gitignore  LICENSE  README.md
icu4c/source/: CMakeLists.txt  filters.json
icu4c/source/common/: CMakeLists.txt
icu4c/source/common/unicode/: urename.h
icu4c/source/i18n/: CMakeLists.txt
icu4c/source/stubdata/: CMakeLists.txt
icu4c/source/test/intltest/: transtst.cpp
tools/cldr/cldr-to-icu/: pom.xml
